--- a/table01.html
+++ b/table01.html
@@ -8,7 +8,7 @@
         <table border = "1" width = "50%">
             <tr>
                 <td><b>First Name</b></td>
-                <t><b>Last Name</b></td>
+                <td><b>Last Name</b></td>
                 <td><b>Age</b></td>
                 <td><b>Phone No</b></td>
                 <td><b>Pin Code</b></td>
@@ -76,7 +76,7 @@
         </table>
         <br>
         <br>
-        <table border = "1" style = "margin:auto">
+        <table border = "1" style = "margin:left">
             <tr>
                 <td style = "background-color: #C0C0C0;">Name</td>
                 <td>jaku</td>
